--- a/Midterm/stylesheet.css
+++ b/Midterm/stylesheet.css
@@ -3,6 +3,19 @@
     max-width:900px;
     margin:0 auto;
 }
+title{
+    font-size: 20px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+h5{
+    font-size: small;
+    font-family: sans-serif, Arial, Helvetica;
+}
+
+h6{
+    font-size: x-small;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
+}
 
 p{
     font-family: Helvetica, Arial, sans-serif;
