--- a/resume/style.css
+++ b/resume/style.css
@@ -12,3 +12,9 @@ h1{
     text-transform: uppercase;
     text-align: center;
 }
+
+#title{
+    text-transform: uppercase;
+    color: #33485e;
+    font-size: 1.5em;
+}
