--- a/resume/style.css
+++ b/resume/style.css
@@ -17,4 +17,13 @@ h1{
     text-transform: uppercase;
     color: #33485e;
     font-size: 1.5em;
+    font-weight: 400;
+}
+
+h2{
+    font-size: 1.5em;
+    font-weight: 400;
+    text-transform: uppercase;
+    color:white;
+    background-color: #33485e;
 }
