--- a/resume/style.css
+++ b/resume/style.css
@@ -27,3 +27,19 @@ h2{
     color:white;
     background-color: #33485e;
 }
+
+h3{
+    font-weight: 600;
+    font-size: 1.5em;
+}
+
+h4{
+    font-weight: 400;
+    font-size: 1.5em;
+}
+
+h5{
+    font-weight: 400;
+    font-style: italic;
+    
+}
