--- a/resume/style.css
+++ b/resume/style.css
@@ -15,7 +15,7 @@ body{
     margin: 0 auto
     width: 60%;
     min-width: 300px;
-    border-bottom: 1px; color: #33485e;
+    border-bottom: 1px;
 }
 
 /*HAD TO MAKE A SPECIAL ID FOR THE TITLE*/
@@ -25,18 +25,27 @@ body{
     color: #33485e;
     font-weight: 400;
 }
-/*FOR EACH OF MY SECTIONS*/
-h2{
+/*FOR EACH OF MY SECTIONS. I UPDATED MY CODE TO INCLUDE TINGS LIKE
+DIVS, IDS AND CLASSES. REAL COOL STUFF.*/
+.sectionheader{
     font-size: 1.5em;
     font-weight: 400;
     text-transform: uppercase;
     color:white;
     background-color: #33485e;
+    margin-bottom: 10;
+    margin-top: 20;
+    margin: 0;
+    width: 70%;
+    min-width: 300px;
 }
 
-h3{
+.jobtitle{
     font-weight: 600;
     font-size: 1.5em;
+    margin-bottom: 10;
+    margin-top: 20;
+    margin: 0;
 }
 
 h4{
