--- a/resume/style.css
+++ b/resume/style.css
@@ -16,6 +16,7 @@ body{
     width: 60%;
     min-width: 300px;
     border-bottom: 1px;
+    border-color: #33485e;
 }
 
 /*HAD TO MAKE A SPECIAL ID FOR THE TITLE*/
@@ -33,8 +34,8 @@ DIVS, IDS AND CLASSES. REAL COOL STUFF.*/
     text-transform: uppercase;
     color:white;
     background-color: #33485e;
-    margin-bottom: 10;
-    margin-top: 20;
+    margin-bottom: 10px;
+    margin-top: 20px;
     margin: 0;
     width: 70%;
     min-width: 300px;
@@ -43,18 +44,21 @@ DIVS, IDS AND CLASSES. REAL COOL STUFF.*/
 .jobtitle{
     font-weight: 600;
     font-size: 1.5em;
-    margin-bottom: 10;
-    margin-top: 20;
+    margin-bottom: 10px;
+    margin-top: 20px;
     margin: 0;
 }
-
-h4{
+/*THIS IS A CLASS, WHICH IS DIFFERENT FROM AN ID BECAUSE
+CLASSES ARE MEANT TO BE REUSED AND REPEATED.*/
+.organization{
     font-weight: 400;
-    font-size: 1.5em;
+    font-size: 1.25em;
 }
 
-h5{
+.date{
     font-weight: 400;
     font-style: italic;
+    margin: 0;
+    margin-top: 2px;
 
 }
