--- a/resume/style.css
+++ b/resume/style.css
@@ -62,3 +62,14 @@ CLASSES ARE MEANT TO BE REUSED AND REPEATED.*/
     margin-top: 2px;
 
 }
+
+.description{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin: 0;
+}
+
+.menu{
+    margin: 0px;
+    padding: 0px;
+}
