--- a/resume/style.css
+++ b/resume/style.css
@@ -15,15 +15,15 @@ body{
     padding-bottom: 50px;
 }
 
-#name{
+#name {
     font-size: 3em;
     color: #33485e;
     text-transform: uppercase;
     margin: 0 auto;
-    width: 60%;
+    max-width: 600px;
+    width: 100%;
     min-width: 300px;
-    border-bottom: 1px;
-    border-color: #33485e;
+    border-bottom: 1px solid #33485e;
     text-align: center;
 }
 
