--- a/resume/style.css
+++ b/resume/style.css
@@ -79,12 +79,18 @@ CLASSES ARE MEANT TO BE REUSED AND REPEATED.*/
     margin: 0;
 }
 
-.menu{
-    margin: 0px;
-    padding: 0px;
+.menu {
+    margin: 0;
+    padding: 0;
     text-align: center;
-    display: inline;
+    display: flex;
     list-style-type: none;
+}
+
+.menu li {
+    margin: 0;
+    padding: 10px;
+    display: inline-block;
 }
 
 #do{
