--- a/resume/style.css
+++ b/resume/style.css
@@ -83,12 +83,12 @@ CLASSES ARE MEANT TO BE REUSED AND REPEATED.*/
     margin: 0;
     padding: 0;
     text-align: center;
-    display: flex;
+    display: inline;
     list-style-type: none;
 }
 
 .menu li {
-    margin: 0;
+    margin: 0 auto;
     padding: 10px;
     display: inline-block;
 }
