--- a/Midterm 2.0/stylesheet.css
+++ b/Midterm 2.0/stylesheet.css
@@ -9,21 +9,30 @@
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
-title{
+#title {
     font-size: 20px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
-h5{
+#h5{
     font-size: small;
     font-family: sans-serif, Arial, Helvetica;
 }
 
-h6{
+#h6{
     font-size: x-small;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
 }
 
-p{
+#p{
     font-family: Helvetica, Arial, sans-serif;
     font-size: 13px;
+}
+
+#pullquotefloat {
+    float: right;
+    width: 40%;
+    margin: 0 0 20px 20px;
+    text-align: center;
+    font-size: 1.2em;
+    color: #2980b9;
 }
