--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -1,4 +1,15 @@
-
+.fjalla-one-regular {
+    font-family: "Fjalla One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .newsreader-regular {
+    font-family: "Newsreader", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
 @media screen and (max-width: 500px) {
     div {
        background-color:#cdcdcd;
