--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -2,14 +2,28 @@
     font-family: "Fjalla One", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
+}
   
-  .newsreader-regular {
+.newsreader-regular {
     font-family: "Newsreader", serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-  }
+}
+
+p {
+    font-family: 'Fjalla One', Arial, Helvetica, sans-serif;
+    font-size: medium;
+    font-optical-sizing: auto;
+    color: black;
+}
+
+#title {
+    font-family: 'Newsreader' Georgia, 'Times New Roman', serif;
+    font-optical-sizing: auto;
+    color: #2B6FD6;
+}
+
 @media screen and (max-width: 500px) {
     div {
        background-color:#cdcdcd;
@@ -26,4 +40,4 @@
      p {
        font-family:sans-serif;
      }
-    }
+}
