--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -12,7 +12,7 @@
 }
 
 p {
-    font-family: 'Fjalla One', Arial, Helvetica, sans-serif;
+    font-family: "Fjalla One", Arial, Helvetica, sans-serif;
     font-size: medium;
     font-optical-sizing: auto;
     color: black;
