Cleaning up some code

--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -12,7 +12,7 @@
     color: #2B6FD6;
 }
 
-p {
+.bodytext {
     font-family: "Fjalla One", Arial, Helvetica, sans-serif;
     font-size: medium;
     font-optical-sizing: auto;
