--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -20,7 +20,7 @@
 }
 
 .title {
-    font-family: "Newsreader" Georgia, 'Times New Roman', serif;
+    font-family: "Newsreader", Georgia, 'Times New Roman', serif;
     font-optical-sizing: auto;
     color: #2B6FD6;
 }
