--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -25,14 +25,14 @@
     color: #2B6FD6;
 }
 
-.container {
+div {
     margin: 10;
     border: 5px black
 }
 
 .nav-item {
     font-family: "Newsreader", Georgia, 'Times New Roman', serif;
-    color:#2B6FD6
+    color: #2B6FD6; 
 }
 
 .nav-item-special {
