--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -14,13 +14,14 @@
 
 .bodytext {
     font-family: "Fjalla One", Arial, Helvetica, sans-serif;
-    font-size: medium;
+    font-size: large;
     font-optical-sizing: auto;
     color: black;
 }
 
 .title {
     font-family: "Newsreader", Georgia, 'Times New Roman', serif;
+    font-size: x-large;
     font-optical-sizing: auto;
     color: #2B6FD6;
 }
