--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -14,7 +14,7 @@
 
 .bodytext {
     font-family: "Fjalla One", Arial, Helvetica, sans-serif;
-    font-size: large;
+    font-size: xx-large;
     font-optical-sizing: auto;
     color: black;
 }
