--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -26,24 +26,24 @@
     color: #2B6FD6;
 }
 
-.container {
+.row {
     margin: 10;
     border: 5px black;
 }
 
 .nav-item {
     font-family: "Newsreader", Georgia, 'Times New Roman', serif;
-    color:#2B6FD6; 
+    color: #2B6FD6; 
 }
 
 .nav-item-special {
     font-family: "Newsreader", Georgia, 'Times New Roman', serif;
-    color:crimson;
+    color: crimson;
 }
 
 #navbar-brand {
     font-family: "Newsreader", Georgia, 'Times New Roman', serif;
-    color:#2B6FD6;
+    color: #2B6FD6;
 }
 
 @media screen and (max-width: 500px) {
