--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -21,7 +21,7 @@
 
 .title {
     font-family: "Newsreader", Georgia, 'Times New Roman', serif;
-    font-size: x-large;
+    font-size: xx-large;
     font-optical-sizing: auto;
     color: #2B6FD6;
 }
