--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -12,18 +12,19 @@
     color: #2B6FD6;
 }
 
-.bodytext {
-    font-family: "Fjalla One", Arial, Helvetica, sans-serif;
-    font-size: x-large;
-    font-optical-sizing: auto;
-    color: black;
-}
-
 .title {
     font-family: "Newsreader", Georgia, 'Times New Roman', serif;
     font-size: xx-large;
     font-optical-sizing: auto;
     color: #2B6FD6;
+    font-weight: bold;
+}
+
+.bodytext {
+    font-family: "Fjalla One", Arial, Helvetica, sans-serif;
+    font-size: x-large;
+    font-optical-sizing: auto;
+    color: black;
 }
 
 .container {
