Testing something out

--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -35,6 +35,12 @@
     color: black;
 }
 
+.card-header {
+    font-family: "Fjalla One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 .container {
     margin: 20px;
     width: fit-content;
