--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -48,6 +48,15 @@
     padding: 15px;
 }
 
+#containerspecial {
+    background-image: https://photos.google.com/photo/AF1QipNpwG8w-a39zUpQ_ozpWgTj-6JIVDKYS2VFOuGk;
+    background-size: cover;
+    background-position: center;
+    background-color: rgba(0,0,0, 0.5)
+    z-index: 1;
+
+}
+
 .row {
     margin-bottom: 10px;
     border: 5px black;
