--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -49,12 +49,11 @@
 }
 
 #containerspecial {
-    background-image: https://photos.google.com/photo/AF1QipNpwG8w-a39zUpQ_ozpWgTj-6JIVDKYS2VFOuGk;
+    background-image: "https://photos.google.com/photo/AF1QipNpwG8w-a39zUpQ_ozpWgTj-6JIVDKYS2VFOuGk";
     background-size: cover;
     background-position: center;
     background-color: rgba(0,0,0, 0.5)
-    z-index: 1;
-
+    z-index 1; 
 }
 
 .row {
