--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -48,7 +48,7 @@
     padding: 15px;
 }
 
-#containerspecial {
+.containerspecial {
     margin: 20px;
     width: fit-content;
     border: 5px solid black;
