--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -53,7 +53,7 @@
     width: fit-content;
     border: 5px solid black;
     padding: 15px;
-    background-image: "https://photos.google.com/photo/AF1QipNpwG8w-a39zUpQ_ozpWgTj-6JIVDKYS2VFOuGk";
+    background-image: photos.google.com/photo/AF1QipNpwG8w-a39zUpQ_ozpWgTj-6JIVDKYS2VFOuGk;
     background-size: cover;
     background-position: center;
     background-color: rgba(0,0,0, 0.5)
