--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -48,6 +48,15 @@
     padding: 15px;
 }
 
+.containerspecial {
+    margin: 20px;
+    width: fit-content;
+    border: 5px solid black;
+    padding: 15px;
+    background-image: url(AaronAtWork.jpg) repeat;
+    opacity: 0.5;
+}
+
 .row {
     margin-bottom: 10px;
     border: 5px black;
