--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -53,7 +53,7 @@
     width: fit-content;
     border: 5px solid black;
     padding: 15px;
-    background-image: url(AaronAtWork.jpg) repeat;
+    background-image: url(https://photos.google.com/search/_cAF1QipMixyKaTcaFiU4ljP065G9n5OFgm9056mc_Aaron%20Wright/photo/AF1QipNpwG8w-a39zUpQ_ozpWgTj-6JIVDKYS2VFOuGk) repeat;
     opacity: 0.5;
 }
 
