--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -53,7 +53,7 @@
     width: fit-content;
     border: 5px solid black;
     padding: 15px;
-    background-image: url(https://photos.google.com/search/_cAF1QipMixyKaTcaFiU4ljP065G9n5OFgm9056mc_Aaron%20Wright/photo/AF1QipNpwG8w-a39zUpQ_ozpWgTj-6JIVDKYS2VFOuGk);
+    background: url(AaronAtWork.jpg);
     opacity: 0.5;
 }
 
@@ -61,6 +61,7 @@
     margin-bottom: 10px;
     border: 5px black;
     padding-left: 2rem;
+    opacity: 1;
 }
 
 .nav-item {
