--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -46,21 +46,13 @@
     width: fit-content;
     border: 5px solid black;
     padding: 15px;
-}
-
-.containerspecial {
-    margin: 20px;
-    width: fit-content;
-    border: 5px solid black;
-    padding: 15px;
-    background: url(AaronAtWork.jpg);
-    opacity: 0.5;
+    background-color: #cdcdcd;
 }
 
 .row {
     margin-bottom: 10px;
     border: 5px black;
-    padding-left: 2rem;
+    padding-left: 1.5rem;
     opacity: 1;
 }
 
@@ -93,6 +85,6 @@
        font-family:sans-serif;
      }       
      p {
-       font-family:sans-serif;
+       font-family:'Times New Roman', Times, serif;
      }
 }
