--- a/Resume Project/style.css
+++ b/Resume Project/style.css
@@ -63,7 +63,7 @@
     width: fit-content;
     border: 5px solid black;
     padding: 15px;
-    background-image: url("C:\Aaron-Wright-JOUR352\Resume Project\MarylandAaron.jpg");
+    background-image: url("Aaron-Wright-JOUR352/Resume Project/MarylandAaron.jpg");
     opacity: 0.5;
 }
 
