I swear if it's all in the name...

--- a/Resume-Project/style.css
+++ b/Resume-Project/style.css
@@ -59,7 +59,7 @@
 }
 
 .containerspecial {
-    background-image: url("Aaron-Wright-JOUR352/Resume-Project/MarylandAaron.jpg");
+    background-image: url("Aaron-Wright-JOUR352/Resume Project/MarylandAaron.jpg");
     margin: 20px;
     width: fit-content;
     border: 5px solid black;
