--- a/html-frame/style.css
+++ b/html-frame/style.css
@@ -1,16 +1,8 @@
-body{
-    font-family: 'Open Sans', 'Arial', sans-serif;
-    font-size: 1em;
-    font-weight: 400;
-    color: #444;
-    
-}
-
 .container{
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    padding-bottom: 50px;
+    padding: 50px;
 }
 
 .Headline{
@@ -18,9 +10,7 @@ body{
     color: black;
     text-transform: capitalize;
     margin: 0 auto;
-    max-width: 600px;
     width: 100%;
-    min-width: 300px;
     text-align: center;
 }
 
