--- a/html-frame/style.css
+++ b/html-frame/style.css
@@ -21,6 +21,7 @@
     text-align: center;
     margin: 0 auto;
     width: 100%;
+    padding: 20px;
 
 }
 
@@ -29,6 +30,7 @@
     color: black;
     text-transform: capitalize;
     margin: 0 auto;
+    padding: 20px;
 }
 
 .bodytext{
@@ -36,6 +38,13 @@
     font-size: medium;
     color: black;
     margin: 0 auto;
+    margin: 20px;
+}
+
+.caption{
+    font-family: 'Courier New', Courier, monospace;
+    color: gray;
+    font-size: small;
 }
 
 /*THIS IS A CLASS, WHICH IS DIFFERENT FROM AN ID BECAUSE
