--- a/html-frame/style.css
+++ b/html-frame/style.css
@@ -20,7 +20,7 @@
 }
 
 .headline {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
     color: black;
     font-weight: 200;
     font-size: large;
