--- a/data-viz-project-A.C/style.css
+++ b/data-viz-project-A.C/style.css
@@ -43,7 +43,7 @@
 }
 
 .bodytext {
-    font-family: "Yanone-Kaffeesatz", Arial, Helvetica, sans-serif;
+    font-family: "Yanone Kaffeesatz", Arial, Helvetica, sans-serif;
     color: black;
     font-weight: 100;
     font-size: medium;
