--- a/data-viz-project-A.C/style.css
+++ b/data-viz-project-A.C/style.css
@@ -18,7 +18,7 @@
   }
 
   .headline {
-    font-family: "Stoke", 'Times New Roman', Times, serif;
+    font-family: "Yanone Kaffeesatz", Arial, Helvetica, sans-serif;
     color: black;
     font-weight: 400;
     font-size: xx-large;
