--- a/data-viz-project-A.C/style.css
+++ b/data-viz-project-A.C/style.css
@@ -45,8 +45,8 @@
 .bodytext {
     font-family: "Yanone Kaffeesatz", Arial, Helvetica, sans-serif;
     color: black;
-    font-weight: 100;
-    font-size: medium;
+    font-weight: 200;
+    font-size: large;
 }
 
 .container {
