--- a/data-viz-project-A.C/style.css
+++ b/data-viz-project-A.C/style.css
@@ -28,8 +28,8 @@
 .byline {
     font-family:"Yanone Kaffeesatz", Arial, Helvetica, sans-serif;
     color: gray;
-    font-weight: 100;
-    font-size: medium;
+    font-weight: 200;
+    font-size: x-large;
     text-align: center;
 }
 
