--- a/data-viz-project-A.C/style.css
+++ b/data-viz-project-A.C/style.css
@@ -48,6 +48,16 @@
     font-size: x-large;
 }
 
+#pullquotefloat {
+    float: right;
+    width: 40%;
+    margin: 0 0 20px 20px;
+    text-align: center;
+    font-family: "Stoke", 'Times New Roman', Times, serif;
+    font-size: 1.2em;
+    color: #2980b9;
+}
+
 .container {
     margin: auto;
     width: auto;
