--- a/data-viz-project-A.C/style.css
+++ b/data-viz-project-A.C/style.css
@@ -48,7 +48,7 @@
     font-size: x-large;
 }
 
-#pullquotefloat {
+.pullquotefloat {
     float: right;
     width: 40%;
     margin: 0 0 20px 20px;
