--- a/data-viz-project-A.C/style.css
+++ b/data-viz-project-A.C/style.css
@@ -48,8 +48,7 @@
     font-size: x-large;
 }
 
-.pullquotefloat {
-    float: right;
+.col-md-4 {
     width: 40%;
     margin: 0 0 20px 20px;
     text-align: center;
