--- a/data-viz-project-A.C/style.css
+++ b/data-viz-project-A.C/style.css
@@ -48,7 +48,8 @@
     font-size: x-large;
 }
 
-.col-md-4 {
+#pullquotefloat {
+    float: right;
     width: 40%;
     margin: 0 0 20px 20px;
     text-align: center;
