--- a/data-viz-project-A.C/style.css
+++ b/data-viz-project-A.C/style.css
@@ -54,7 +54,7 @@
     margin: 0 0 20px 20px;
     text-align: center;
     font-family: "Stoke", 'Times New Roman', Times, serif;
-    font-size: 1.2em;
+    font-size: xx-large;
     color: #2980b9;
 }
 
